Entrega3/y.output
Terminals which are not used

   "Identificador_muito_grande"
   "Inteiro_fora_dos_limites"
   "Numero_mal_formado"
   "Caracter_nao_identificado"
   "Comentario_nao_fechado"
   "function"


State 5 conflicts: 1 shift/reduce
State 8 conflicts: 1 shift/reduce
State 13 conflicts: 1 shift/reduce
State 22 conflicts: 1 shift/reduce
State 29 conflicts: 1 shift/reduce
State 35 conflicts: 1 shift/reduce
State 44 conflicts: 1 shift/reduce
State 63 conflicts: 1 shift/reduce
State 93 conflicts: 1 shift/reduce
State 116 conflicts: 2 shift/reduce
State 120 conflicts: 1 shift/reduce
State 154 conflicts: 1 shift/reduce
State 161 conflicts: 1 shift/reduce
State 198 conflicts: 1 shift/reduce, 1 reduce/reduce
State 203 conflicts: 1 shift/reduce
State 210 conflicts: 1 shift/reduce
State 219 conflicts: 1 shift/reduce
State 231 conflicts: 1 reduce/reduce


Grammar

    0 $accept: program $end

    1 @1: /* empty */

    2 program: "program" "identificador" ";" @1 corpo "."
    3        | "program" error corpo "."
    4        | error ";" ok corpo "."

    5 @2: /* empty */

    6 corpo: dc "begin" @2 comandos "end" ok

    7 @3: /* empty */

    8 dc: dc_c dc_v @3 dc_p

    9 @4: /* empty */

   10 dc_c: "const" "identificador" ok ":=" numero ";" @4 dc_c
   11     | error err_c ok dc_c
   12     | "const" error dc_c
   13     | /* empty */

   14 @5: /* empty */

   15 @6: /* empty */

   16 dc_v: "var" @5 variaveis ok ":" tipo_var ";" ok @6 dc_v
   17     | error err_v ok dc_v
   18     | "var" error dc_v
   19     | /* empty */

   20 @7: /* empty */

   21 @8: /* empty */

   22 @9: /* empty */

   23 dc_p: "procedure" "identificador" @7 ok parametros @8 ";" corpo_p ok @9 dc_p
   24     | "procedure" error corpo_p ok dc_p
   25     | error err_p ok dc_p
   26     | /* empty */

   27 err_c: ";"
   28      | "const" less
   29      | "var" less
   30      | "procedure" less
   31      | "begin" less

   32 err_v: ";"
   33      | "var" less
   34      | "procedure" less
   35      | "begin" less

   36 err_p: ";"
   37      | "procedure" less
   38      | "begin" less
   39      | "end"

   40 parametros: "(" lista_par ")"
   41           | "(" error ")"
   42           | /* empty */

   43 @10: /* empty */

   44 lista_par: variaveis ":" tipo_var @10 mais_par
   45          | error variaveis ":" tipo_var ok mais_par
   46          | error mais_par ok
   47          | error

   48 mais_par: ";" lista_par
   49         | error ";" ok lista_par
   50         | error lista_par
   51         | error
   52         | /* empty */

   53 corpo_p: dc_v "begin" ok comandos "end" ";"
   54        | dc_v "begin" ok comandos "end"
   55        | dc_v error
   56        | error corpo_p

   57 comandos: cmd ";" ok comandos
   58         | error comandos
   59         | /* empty */

   60 @11: /* empty */

   61 @12: /* empty */

   62 cmd: "readln" ok "(" @11 variaveis @12 ")" ok

   63 @13: /* empty */

   64 @14: /* empty */

   65 cmd: "writeln" @13 ok "(" variaveis @14 ")" ok
   66    | "begin" ok comandos "end" ok
   67    | "identificador" ok ":=" expressao

   68 @15: /* empty */

   69 cmd: "repeat" @15 ok comandos "until" ok condicao

   70 @16: /* empty */

   71 @17: /* empty */

   72 cmd: "identificador" @16 ok lista_arg @17 ok

   73 @18: /* empty */

   74 cmd: "if" ok condicao @18 "then" ok cmd pfalsa

   75 @19: /* empty */

   76 @20: /* empty */

   77 cmd: "while" @19 ok condicao @20 "do" ok cmd

   78 @21: /* empty */

   79 pfalsa: "else" ok @21 cmd
   80       | /* empty */

   81 lista_arg: "(" argumentos ")"
   82          | "(" error ")"
   83          | /* empty */

   84 @22: /* empty */

   85 argumentos: "identificador" @22 ok mais_ident ok
   86           | error

   87 mais_ident: ";" ok argumentos ok
   88           | error argumentos ok
   89           | error
   90           | /* empty */

   91 condicao: expressao relacao expressao
   92         | expressao error

   93 relacao: "="
   94        | "<>"
   95        | ">="
   96        | "<="
   97        | ">"
   98        | "<"

   99 expressao: termo outros_termos

  100 @23: /* empty */

  101 termo: op_un fator @23 mais_fatores

  102 fator: numero
  103      | "(" expressao ")"
  104      | "identificador"

  105 @24: /* empty */

  106 mais_fatores: op_mul fator @24 mais_fatores
  107             | /* empty */

  108 @25: /* empty */

  109 outros_termos: op_ad termo @25 outros_termos
  110              | /* empty */

  111 @26: /* empty */

  112 variaveis: "identificador" @26 ok mais_var

  113 mais_var: SB_VG variaveis
  114         | /* empty */

  115 op_un: "+"
  116      | "-"
  117      | /* empty */

  118 op_ad: "+"
  119      | "-"

  120 op_mul: "*"
  121       | "/"

  122 numero: "numero_real"
  123       | "numero_inteiro"

  124 tipo_var: "integer"
  125         | "real"
  126         | "char"

  127 ok: /* empty */

  128 less: /* empty */


Terminals, with rules where they appear

$end (0) 0
error (256) 3 4 11 12 17 18 24 25 41 45 46 47 49 50 51 55 56 58 82
    86 88 89 92
"identificador" (258) 2 10 23 67 72 85 104 112
":=" (259) 10 67
"<>" (260) 94
">=" (261) 95
"<=" (262) 96
">" (263) 97
"<" (264) 98
"+" (265) 115 118
"-" (266) 116 119
"*" (267) 120
"/" (268) 121
"=" (269) 93
";" (270) 2 4 10 16 23 27 32 36 48 49 53 57 87
"." (271) 2 3 4
":" (272) 16 44 45
SB_VG (273) 113
"(" (274) 40 41 62 65 81 82 103
")" (275) 40 41 62 65 81 82 103
"Identificador_muito_grande" (276)
"Inteiro_fora_dos_limites" (277)
"Numero_mal_formado" (278)
"Caracter_nao_identificado" (279)
"Comentario_nao_fechado" (280)
"numero_inteiro" (281) 123
"numero_real" (282) 122
"program" (283) 2 3
"begin" (284) 6 31 35 38 53 54 66
"end" (285) 6 39 53 54 66
"const" (286) 10 12 28
"var" (287) 16 18 29 33
"real" (288) 125
"integer" (289) 124
"char" (290) 126
"procedure" (291) 23 24 30 34 37
"if" (292) 74
"else" (293) 79
"readln" (294) 62
"writeln" (295) 65
"repeat" (296) 69
"then" (297) 74
"until" (298) 69
"while" (299) 77
"do" (300) 77
"function" (301)


Nonterminals, with rules where they appear

$accept (47)
    on left: 0
program (48)
    on left: 2 3 4, on right: 0
@1 (49)
    on left: 1, on right: 2
corpo (50)
    on left: 6, on right: 2 3 4
@2 (51)
    on left: 5, on right: 6
dc (52)
    on left: 8, on right: 6
@3 (53)
    on left: 7, on right: 8
dc_c (54)
    on left: 10 11 12 13, on right: 8 10 11 12
@4 (55)
    on left: 9, on right: 10
dc_v (56)
    on left: 16 17 18 19, on right: 8 16 17 18 53 54 55
@5 (57)
    on left: 14, on right: 16
@6 (58)
    on left: 15, on right: 16
dc_p (59)
    on left: 23 24 25 26, on right: 8 23 24 25
@7 (60)
    on left: 20, on right: 23
@8 (61)
    on left: 21, on right: 23
@9 (62)
    on left: 22, on right: 23
err_c (63)
    on left: 27 28 29 30 31, on right: 11
err_v (64)
    on left: 32 33 34 35, on right: 17
err_p (65)
    on left: 36 37 38 39, on right: 25
parametros (66)
    on left: 40 41 42, on right: 23
lista_par (67)
    on left: 44 45 46 47, on right: 40 48 49 50
@10 (68)
    on left: 43, on right: 44
mais_par (69)
    on left: 48 49 50 51 52, on right: 44 45 46
corpo_p (70)
    on left: 53 54 55 56, on right: 23 24 56
comandos (71)
    on left: 57 58 59, on right: 6 53 54 57 58 66 69
cmd (72)
    on left: 62 65 66 67 69 72 74 77, on right: 57 74 77 79
@11 (73)
    on left: 60, on right: 62
@12 (74)
    on left: 61, on right: 62
@13 (75)
    on left: 63, on right: 65
@14 (76)
    on left: 64, on right: 65
@15 (77)
    on left: 68, on right: 69
@16 (78)
    on left: 70, on right: 72
@17 (79)
    on left: 71, on right: 72
@18 (80)
    on left: 73, on right: 74
@19 (81)
    on left: 75, on right: 77
@20 (82)
    on left: 76, on right: 77
pfalsa (83)
    on left: 79 80, on right: 74
@21 (84)
    on left: 78, on right: 79
lista_arg (85)
    on left: 81 82 83, on right: 72
argumentos (86)
    on left: 85 86, on right: 81 87 88
@22 (87)
    on left: 84, on right: 85
mais_ident (88)
    on left: 87 88 89 90, on right: 85
condicao (89)
    on left: 91 92, on right: 69 74 77
relacao (90)
    on left: 93 94 95 96 97 98, on right: 91
expressao (91)
    on left: 99, on right: 67 91 92 103
termo (92)
    on left: 101, on right: 99 109
@23 (93)
    on left: 100, on right: 101
fator (94)
    on left: 102 103 104, on right: 101 106
mais_fatores (95)
    on left: 106 107, on right: 101 106
@24 (96)
    on left: 105, on right: 106
outros_termos (97)
    on left: 109 110, on right: 99 109
@25 (98)
    on left: 108, on right: 109
variaveis (99)
    on left: 112, on right: 16 44 45 62 65 113
@26 (100)
    on left: 111, on right: 112
mais_var (101)
    on left: 113 114, on right: 112
op_un (102)
    on left: 115 116 117, on right: 101
op_ad (103)
    on left: 118 119, on right: 109
op_mul (104)
    on left: 120 121, on right: 106
numero (105)
    on left: 122 123, on right: 10 102
tipo_var (106)
    on left: 124 125 126, on right: 16 44 45
ok (107)
    on left: 127, on right: 4 6 10 11 16 17 23 24 25 45 46 49 53 54
    57 62 65 66 67 69 72 74 77 79 85 87 88 112
less (108)
    on left: 128, on right: 28 29 30 31 33 34 35 37 38


state 0

    0 $accept: . program $end

    error      shift, and go to state 1
    "program"  shift, and go to state 2

    program  go to state 3


state 1

    4 program: error . ";" ok corpo "."

    ";"  shift, and go to state 4


state 2

    2 program: "program" . "identificador" ";" @1 corpo "."
    3        | "program" . error corpo "."

    error            shift, and go to state 5
    "identificador"  shift, and go to state 6


state 3

    0 $accept: program . $end

    $end  shift, and go to state 7


state 4

    4 program: error ";" . ok corpo "."

    $default  reduce using rule 127 (ok)

    ok  go to state 8


state 5

    3 program: "program" error . corpo "."

    error    shift, and go to state 9
    "const"  shift, and go to state 10

    error        [reduce using rule 13 (dc_c)]
    "begin"      reduce using rule 13 (dc_c)
    "var"        reduce using rule 13 (dc_c)
    "procedure"  reduce using rule 13 (dc_c)

    corpo  go to state 11
    dc     go to state 12
    dc_c   go to state 13


state 6

    2 program: "program" "identificador" . ";" @1 corpo "."

    ";"  shift, and go to state 14


state 7

    0 $accept: program $end .

    $default  accept


state 8

    4 program: error ";" ok . corpo "."

    error    shift, and go to state 9
    "const"  shift, and go to state 10

    error        [reduce using rule 13 (dc_c)]
    "begin"      reduce using rule 13 (dc_c)
    "var"        reduce using rule 13 (dc_c)
    "procedure"  reduce using rule 13 (dc_c)

    corpo  go to state 15
    dc     go to state 12
    dc_c   go to state 13


state 9

   11 dc_c: error . err_c ok dc_c

    ";"          shift, and go to state 16
    "begin"      shift, and go to state 17
    "const"      shift, and go to state 18
    "var"        shift, and go to state 19
    "procedure"  shift, and go to state 20

    err_c  go to state 21


state 10

   10 dc_c: "const" . "identificador" ok ":=" numero ";" @4 dc_c
   12     | "const" . error dc_c

    error            shift, and go to state 22
    "identificador"  shift, and go to state 23


state 11

    3 program: "program" error corpo . "."

    "."  shift, and go to state 24


state 12

    6 corpo: dc . "begin" @2 comandos "end" ok

    "begin"  shift, and go to state 25


state 13

    8 dc: dc_c . dc_v @3 dc_p

    error  shift, and go to state 26
    "var"  shift, and go to state 27

    error        [reduce using rule 19 (dc_v)]
    "begin"      reduce using rule 19 (dc_v)
    "procedure"  reduce using rule 19 (dc_v)

    dc_v  go to state 28


state 14

    2 program: "program" "identificador" ";" . @1 corpo "."

    $default  reduce using rule 1 (@1)

    @1  go to state 29


state 15

    4 program: error ";" ok corpo . "."

    "."  shift, and go to state 30


state 16

   27 err_c: ";" .

    $default  reduce using rule 27 (err_c)


state 17

   31 err_c: "begin" . less

    $default  reduce using rule 128 (less)

    less  go to state 31


state 18

   28 err_c: "const" . less

    $default  reduce using rule 128 (less)

    less  go to state 32


state 19

   29 err_c: "var" . less

    $default  reduce using rule 128 (less)

    less  go to state 33


state 20

   30 err_c: "procedure" . less

    $default  reduce using rule 128 (less)

    less  go to state 34


state 21

   11 dc_c: error err_c . ok dc_c

    $default  reduce using rule 127 (ok)

    ok  go to state 35


state 22

   12 dc_c: "const" error . dc_c

    error    shift, and go to state 9
    "const"  shift, and go to state 10

    error        [reduce using rule 13 (dc_c)]
    "begin"      reduce using rule 13 (dc_c)
    "var"        reduce using rule 13 (dc_c)
    "procedure"  reduce using rule 13 (dc_c)

    dc_c  go to state 36


state 23

   10 dc_c: "const" "identificador" . ok ":=" numero ";" @4 dc_c

    $default  reduce using rule 127 (ok)

    ok  go to state 37


state 24

    3 program: "program" error corpo "." .

    $default  reduce using rule 3 (program)


state 25

    6 corpo: dc "begin" . @2 comandos "end" ok

    $default  reduce using rule 5 (@2)

    @2  go to state 38


state 26

   17 dc_v: error . err_v ok dc_v

    ";"          shift, and go to state 39
    "begin"      shift, and go to state 40
    "var"        shift, and go to state 41
    "procedure"  shift, and go to state 42

    err_v  go to state 43


state 27

   16 dc_v: "var" . @5 variaveis ok ":" tipo_var ";" ok @6 dc_v
   18     | "var" . error dc_v

    error  shift, and go to state 44

    "identificador"  reduce using rule 14 (@5)

    @5  go to state 45


state 28

    8 dc: dc_c dc_v . @3 dc_p

    $default  reduce using rule 7 (@3)

    @3  go to state 46


state 29

    2 program: "program" "identificador" ";" @1 . corpo "."

    error    shift, and go to state 9
    "const"  shift, and go to state 10

    error        [reduce using rule 13 (dc_c)]
    "begin"      reduce using rule 13 (dc_c)
    "var"        reduce using rule 13 (dc_c)
    "procedure"  reduce using rule 13 (dc_c)

    corpo  go to state 47
    dc     go to state 12
    dc_c   go to state 13


state 30

    4 program: error ";" ok corpo "." .

    $default  reduce using rule 4 (program)


state 31

   31 err_c: "begin" less .

    $default  reduce using rule 31 (err_c)


state 32

   28 err_c: "const" less .

    $default  reduce using rule 28 (err_c)


state 33

   29 err_c: "var" less .

    $default  reduce using rule 29 (err_c)


state 34

   30 err_c: "procedure" less .

    $default  reduce using rule 30 (err_c)


state 35

   11 dc_c: error err_c ok . dc_c

    error    shift, and go to state 9
    "const"  shift, and go to state 10

    error        [reduce using rule 13 (dc_c)]
    "begin"      reduce using rule 13 (dc_c)
    "var"        reduce using rule 13 (dc_c)
    "procedure"  reduce using rule 13 (dc_c)

    dc_c  go to state 48


state 36

   12 dc_c: "const" error dc_c .

    $default  reduce using rule 12 (dc_c)


state 37

   10 dc_c: "const" "identificador" ok . ":=" numero ";" @4 dc_c

    ":="  shift, and go to state 49


state 38

    6 corpo: dc "begin" @2 . comandos "end" ok

    error            shift, and go to state 50
    "identificador"  shift, and go to state 51
    "begin"          shift, and go to state 52
    "if"             shift, and go to state 53
    "readln"         shift, and go to state 54
    "writeln"        shift, and go to state 55
    "repeat"         shift, and go to state 56
    "while"          shift, and go to state 57

    "end"  reduce using rule 59 (comandos)

    comandos  go to state 58
    cmd       go to state 59


state 39

   32 err_v: ";" .

    $default  reduce using rule 32 (err_v)


state 40

   35 err_v: "begin" . less

    $default  reduce using rule 128 (less)

    less  go to state 60


state 41

   33 err_v: "var" . less

    $default  reduce using rule 128 (less)

    less  go to state 61


state 42

   34 err_v: "procedure" . less

    $default  reduce using rule 128 (less)

    less  go to state 62


state 43

   17 dc_v: error err_v . ok dc_v

    $default  reduce using rule 127 (ok)

    ok  go to state 63


state 44

   18 dc_v: "var" error . dc_v

    error  shift, and go to state 26
    "var"  shift, and go to state 27

    error        [reduce using rule 19 (dc_v)]
    "begin"      reduce using rule 19 (dc_v)
    "procedure"  reduce using rule 19 (dc_v)

    dc_v  go to state 64


state 45

   16 dc_v: "var" @5 . variaveis ok ":" tipo_var ";" ok @6 dc_v

    "identificador"  shift, and go to state 65

    variaveis  go to state 66


state 46

    8 dc: dc_c dc_v @3 . dc_p

    error        shift, and go to state 67
    "procedure"  shift, and go to state 68

    "begin"  reduce using rule 26 (dc_p)

    dc_p  go to state 69


state 47

    2 program: "program" "identificador" ";" @1 corpo . "."

    "."  shift, and go to state 70


state 48

   11 dc_c: error err_c ok dc_c .

    $default  reduce using rule 11 (dc_c)


state 49

   10 dc_c: "const" "identificador" ok ":=" . numero ";" @4 dc_c

    "numero_inteiro"  shift, and go to state 71
    "numero_real"     shift, and go to state 72

    numero  go to state 73


state 50

   58 comandos: error . comandos

    error            shift, and go to state 50
    "identificador"  shift, and go to state 51
    "begin"          shift, and go to state 52
    "if"             shift, and go to state 53
    "readln"         shift, and go to state 54
    "writeln"        shift, and go to state 55
    "repeat"         shift, and go to state 56
    "while"          shift, and go to state 57

    "end"    reduce using rule 59 (comandos)
    "until"  reduce using rule 59 (comandos)

    comandos  go to state 74
    cmd       go to state 59


state 51

   67 cmd: "identificador" . ok ":=" expressao
   72    | "identificador" . @16 ok lista_arg @17 ok

    ":="      reduce using rule 127 (ok)
    $default  reduce using rule 70 (@16)

    @16  go to state 75
    ok   go to state 76


state 52

   66 cmd: "begin" . ok comandos "end" ok

    $default  reduce using rule 127 (ok)

    ok  go to state 77


state 53

   74 cmd: "if" . ok condicao @18 "then" ok cmd pfalsa

    $default  reduce using rule 127 (ok)

    ok  go to state 78


state 54

   62 cmd: "readln" . ok "(" @11 variaveis @12 ")" ok

    $default  reduce using rule 127 (ok)

    ok  go to state 79


state 55

   65 cmd: "writeln" . @13 ok "(" variaveis @14 ")" ok

    $default  reduce using rule 63 (@13)

    @13  go to state 80


state 56

   69 cmd: "repeat" . @15 ok comandos "until" ok condicao

    $default  reduce using rule 68 (@15)

    @15  go to state 81


state 57

   77 cmd: "while" . @19 ok condicao @20 "do" ok cmd

    $default  reduce using rule 75 (@19)

    @19  go to state 82


state 58

    6 corpo: dc "begin" @2 comandos . "end" ok

    "end"  shift, and go to state 83


state 59

   57 comandos: cmd . ";" ok comandos

    ";"  shift, and go to state 84


state 60

   35 err_v: "begin" less .

    $default  reduce using rule 35 (err_v)


state 61

   33 err_v: "var" less .

    $default  reduce using rule 33 (err_v)


state 62

   34 err_v: "procedure" less .

    $default  reduce using rule 34 (err_v)


state 63

   17 dc_v: error err_v ok . dc_v

    error  shift, and go to state 26
    "var"  shift, and go to state 27

    error        [reduce using rule 19 (dc_v)]
    "begin"      reduce using rule 19 (dc_v)
    "procedure"  reduce using rule 19 (dc_v)

    dc_v  go to state 85


state 64

   18 dc_v: "var" error dc_v .

    $default  reduce using rule 18 (dc_v)


state 65

  112 variaveis: "identificador" . @26 ok mais_var

    $default  reduce using rule 111 (@26)

    @26  go to state 86


state 66

   16 dc_v: "var" @5 variaveis . ok ":" tipo_var ";" ok @6 dc_v

    $default  reduce using rule 127 (ok)

    ok  go to state 87


state 67

   25 dc_p: error . err_p ok dc_p

    ";"          shift, and go to state 88
    "begin"      shift, and go to state 89
    "end"        shift, and go to state 90
    "procedure"  shift, and go to state 91

    err_p  go to state 92


state 68

   23 dc_p: "procedure" . "identificador" @7 ok parametros @8 ";" corpo_p ok @9 dc_p
   24     | "procedure" . error corpo_p ok dc_p

    error            shift, and go to state 93
    "identificador"  shift, and go to state 94


state 69

    8 dc: dc_c dc_v @3 dc_p .

    $default  reduce using rule 8 (dc)


state 70

    2 program: "program" "identificador" ";" @1 corpo "." .

    $default  reduce using rule 2 (program)


state 71

  123 numero: "numero_inteiro" .

    $default  reduce using rule 123 (numero)


state 72

  122 numero: "numero_real" .

    $default  reduce using rule 122 (numero)


state 73

   10 dc_c: "const" "identificador" ok ":=" numero . ";" @4 dc_c

    ";"  shift, and go to state 95


state 74

   58 comandos: error comandos .

    $default  reduce using rule 58 (comandos)


state 75

   72 cmd: "identificador" @16 . ok lista_arg @17 ok

    $default  reduce using rule 127 (ok)

    ok  go to state 96


state 76

   67 cmd: "identificador" ok . ":=" expressao

    ":="  shift, and go to state 97


state 77

   66 cmd: "begin" ok . comandos "end" ok

    error            shift, and go to state 50
    "identificador"  shift, and go to state 51
    "begin"          shift, and go to state 52
    "if"             shift, and go to state 53
    "readln"         shift, and go to state 54
    "writeln"        shift, and go to state 55
    "repeat"         shift, and go to state 56
    "while"          shift, and go to state 57

    "end"  reduce using rule 59 (comandos)

    comandos  go to state 98
    cmd       go to state 59


state 78

   74 cmd: "if" ok . condicao @18 "then" ok cmd pfalsa

    "+"  shift, and go to state 99
    "-"  shift, and go to state 100

    $default  reduce using rule 117 (op_un)

    condicao   go to state 101
    expressao  go to state 102
    termo      go to state 103
    op_un      go to state 104


state 79

   62 cmd: "readln" ok . "(" @11 variaveis @12 ")" ok

    "("  shift, and go to state 105


state 80

   65 cmd: "writeln" @13 . ok "(" variaveis @14 ")" ok

    $default  reduce using rule 127 (ok)

    ok  go to state 106


state 81

   69 cmd: "repeat" @15 . ok comandos "until" ok condicao

    $default  reduce using rule 127 (ok)

    ok  go to state 107


state 82

   77 cmd: "while" @19 . ok condicao @20 "do" ok cmd

    $default  reduce using rule 127 (ok)

    ok  go to state 108


state 83

    6 corpo: dc "begin" @2 comandos "end" . ok

    $default  reduce using rule 127 (ok)

    ok  go to state 109


state 84

   57 comandos: cmd ";" . ok comandos

    $default  reduce using rule 127 (ok)

    ok  go to state 110


state 85

   17 dc_v: error err_v ok dc_v .

    $default  reduce using rule 17 (dc_v)


state 86

  112 variaveis: "identificador" @26 . ok mais_var

    $default  reduce using rule 127 (ok)

    ok  go to state 111


state 87

   16 dc_v: "var" @5 variaveis ok . ":" tipo_var ";" ok @6 dc_v

    ":"  shift, and go to state 112


state 88

   36 err_p: ";" .

    $default  reduce using rule 36 (err_p)


state 89

   38 err_p: "begin" . less

    $default  reduce using rule 128 (less)

    less  go to state 113


state 90

   39 err_p: "end" .

    $default  reduce using rule 39 (err_p)


state 91

   37 err_p: "procedure" . less

    $default  reduce using rule 128 (less)

    less  go to state 114


state 92

   25 dc_p: error err_p . ok dc_p

    $default  reduce using rule 127 (ok)

    ok  go to state 115


state 93

   24 dc_p: "procedure" error . corpo_p ok dc_p

    error  shift, and go to state 116
    "var"  shift, and go to state 27

    error    [reduce using rule 19 (dc_v)]
    "begin"  reduce using rule 19 (dc_v)

    dc_v     go to state 117
    corpo_p  go to state 118


state 94

   23 dc_p: "procedure" "identificador" . @7 ok parametros @8 ";" corpo_p ok @9 dc_p

    $default  reduce using rule 20 (@7)

    @7  go to state 119


state 95

   10 dc_c: "const" "identificador" ok ":=" numero ";" . @4 dc_c

    $default  reduce using rule 9 (@4)

    @4  go to state 120


state 96

   72 cmd: "identificador" @16 ok . lista_arg @17 ok

    "("  shift, and go to state 121

    $default  reduce using rule 83 (lista_arg)

    lista_arg  go to state 122


state 97

   67 cmd: "identificador" ok ":=" . expressao

    "+"  shift, and go to state 99
    "-"  shift, and go to state 100

    $default  reduce using rule 117 (op_un)

    expressao  go to state 123
    termo      go to state 103
    op_un      go to state 104


state 98

   66 cmd: "begin" ok comandos . "end" ok

    "end"  shift, and go to state 124


state 99

  115 op_un: "+" .

    $default  reduce using rule 115 (op_un)


state 100

  116 op_un: "-" .

    $default  reduce using rule 116 (op_un)


state 101

   74 cmd: "if" ok condicao . @18 "then" ok cmd pfalsa

    $default  reduce using rule 73 (@18)

    @18  go to state 125


state 102

   91 condicao: expressao . relacao expressao
   92         | expressao . error

    error  shift, and go to state 126
    "<>"   shift, and go to state 127
    ">="   shift, and go to state 128
    "<="   shift, and go to state 129
    ">"    shift, and go to state 130
    "<"    shift, and go to state 131
    "="    shift, and go to state 132

    relacao  go to state 133


state 103

   99 expressao: termo . outros_termos

    "+"  shift, and go to state 134
    "-"  shift, and go to state 135

    $default  reduce using rule 110 (outros_termos)

    outros_termos  go to state 136
    op_ad          go to state 137


state 104

  101 termo: op_un . fator @23 mais_fatores

    "identificador"   shift, and go to state 138
    "("               shift, and go to state 139
    "numero_inteiro"  shift, and go to state 71
    "numero_real"     shift, and go to state 72

    fator   go to state 140
    numero  go to state 141


state 105

   62 cmd: "readln" ok "(" . @11 variaveis @12 ")" ok

    $default  reduce using rule 60 (@11)

    @11  go to state 142


state 106

   65 cmd: "writeln" @13 ok . "(" variaveis @14 ")" ok

    "("  shift, and go to state 143


state 107

   69 cmd: "repeat" @15 ok . comandos "until" ok condicao

    error            shift, and go to state 50
    "identificador"  shift, and go to state 51
    "begin"          shift, and go to state 52
    "if"             shift, and go to state 53
    "readln"         shift, and go to state 54
    "writeln"        shift, and go to state 55
    "repeat"         shift, and go to state 56
    "while"          shift, and go to state 57

    "until"  reduce using rule 59 (comandos)

    comandos  go to state 144
    cmd       go to state 59


state 108

   77 cmd: "while" @19 ok . condicao @20 "do" ok cmd

    "+"  shift, and go to state 99
    "-"  shift, and go to state 100

    $default  reduce using rule 117 (op_un)

    condicao   go to state 145
    expressao  go to state 102
    termo      go to state 103
    op_un      go to state 104


state 109

    6 corpo: dc "begin" @2 comandos "end" ok .

    $default  reduce using rule 6 (corpo)


state 110

   57 comandos: cmd ";" ok . comandos

    error            shift, and go to state 50
    "identificador"  shift, and go to state 51
    "begin"          shift, and go to state 52
    "if"             shift, and go to state 53
    "readln"         shift, and go to state 54
    "writeln"        shift, and go to state 55
    "repeat"         shift, and go to state 56
    "while"          shift, and go to state 57

    "end"    reduce using rule 59 (comandos)
    "until"  reduce using rule 59 (comandos)

    comandos  go to state 146
    cmd       go to state 59


state 111

  112 variaveis: "identificador" @26 ok . mais_var

    SB_VG  shift, and go to state 147

    $default  reduce using rule 114 (mais_var)

    mais_var  go to state 148


state 112

   16 dc_v: "var" @5 variaveis ok ":" . tipo_var ";" ok @6 dc_v

    "real"     shift, and go to state 149
    "integer"  shift, and go to state 150
    "char"     shift, and go to state 151

    tipo_var  go to state 152


state 113

   38 err_p: "begin" less .

    $default  reduce using rule 38 (err_p)


state 114

   37 err_p: "procedure" less .

    $default  reduce using rule 37 (err_p)


state 115

   25 dc_p: error err_p ok . dc_p

    error        shift, and go to state 67
    "procedure"  shift, and go to state 68

    "begin"  reduce using rule 26 (dc_p)

    dc_p  go to state 153


state 116

   17 dc_v: error . err_v ok dc_v
   56 corpo_p: error . corpo_p

    error        shift, and go to state 116
    ";"          shift, and go to state 39
    "begin"      shift, and go to state 40
    "var"        shift, and go to state 154
    "procedure"  shift, and go to state 42

    error    [reduce using rule 19 (dc_v)]
    "begin"  [reduce using rule 19 (dc_v)]

    dc_v     go to state 117
    err_v    go to state 43
    corpo_p  go to state 155


state 117

   53 corpo_p: dc_v . "begin" ok comandos "end" ";"
   54        | dc_v . "begin" ok comandos "end"
   55        | dc_v . error

    error    shift, and go to state 156
    "begin"  shift, and go to state 157


state 118

   24 dc_p: "procedure" error corpo_p . ok dc_p

    $default  reduce using rule 127 (ok)

    ok  go to state 158


state 119

   23 dc_p: "procedure" "identificador" @7 . ok parametros @8 ";" corpo_p ok @9 dc_p

    $default  reduce using rule 127 (ok)

    ok  go to state 159


state 120

   10 dc_c: "const" "identificador" ok ":=" numero ";" @4 . dc_c

    error    shift, and go to state 9
    "const"  shift, and go to state 10

    error        [reduce using rule 13 (dc_c)]
    "begin"      reduce using rule 13 (dc_c)
    "var"        reduce using rule 13 (dc_c)
    "procedure"  reduce using rule 13 (dc_c)

    dc_c  go to state 160


state 121

   81 lista_arg: "(" . argumentos ")"
   82          | "(" . error ")"

    error            shift, and go to state 161
    "identificador"  shift, and go to state 162

    argumentos  go to state 163


state 122

   72 cmd: "identificador" @16 ok lista_arg . @17 ok

    $default  reduce using rule 71 (@17)

    @17  go to state 164


state 123

   67 cmd: "identificador" ok ":=" expressao .

    $default  reduce using rule 67 (cmd)


state 124

   66 cmd: "begin" ok comandos "end" . ok

    $default  reduce using rule 127 (ok)

    ok  go to state 165


state 125

   74 cmd: "if" ok condicao @18 . "then" ok cmd pfalsa

    "then"  shift, and go to state 166


state 126

   92 condicao: expressao error .

    $default  reduce using rule 92 (condicao)


state 127

   94 relacao: "<>" .

    $default  reduce using rule 94 (relacao)


state 128

   95 relacao: ">=" .

    $default  reduce using rule 95 (relacao)


state 129

   96 relacao: "<=" .

    $default  reduce using rule 96 (relacao)


state 130

   97 relacao: ">" .

    $default  reduce using rule 97 (relacao)


state 131

   98 relacao: "<" .

    $default  reduce using rule 98 (relacao)


state 132

   93 relacao: "=" .

    $default  reduce using rule 93 (relacao)


state 133

   91 condicao: expressao relacao . expressao

    "+"  shift, and go to state 99
    "-"  shift, and go to state 100

    $default  reduce using rule 117 (op_un)

    expressao  go to state 167
    termo      go to state 103
    op_un      go to state 104


state 134

  118 op_ad: "+" .

    $default  reduce using rule 118 (op_ad)


state 135

  119 op_ad: "-" .

    $default  reduce using rule 119 (op_ad)


state 136

   99 expressao: termo outros_termos .

    $default  reduce using rule 99 (expressao)


state 137

  109 outros_termos: op_ad . termo @25 outros_termos

    "+"  shift, and go to state 99
    "-"  shift, and go to state 100

    $default  reduce using rule 117 (op_un)

    termo  go to state 168
    op_un  go to state 104


state 138

  104 fator: "identificador" .

    $default  reduce using rule 104 (fator)


state 139

  103 fator: "(" . expressao ")"

    "+"  shift, and go to state 99
    "-"  shift, and go to state 100

    $default  reduce using rule 117 (op_un)

    expressao  go to state 169
    termo      go to state 103
    op_un      go to state 104


state 140

  101 termo: op_un fator . @23 mais_fatores

    $default  reduce using rule 100 (@23)

    @23  go to state 170


state 141

  102 fator: numero .

    $default  reduce using rule 102 (fator)


state 142

   62 cmd: "readln" ok "(" @11 . variaveis @12 ")" ok

    "identificador"  shift, and go to state 65

    variaveis  go to state 171


state 143

   65 cmd: "writeln" @13 ok "(" . variaveis @14 ")" ok

    "identificador"  shift, and go to state 65

    variaveis  go to state 172


state 144

   69 cmd: "repeat" @15 ok comandos . "until" ok condicao

    "until"  shift, and go to state 173


state 145

   77 cmd: "while" @19 ok condicao . @20 "do" ok cmd

    $default  reduce using rule 76 (@20)

    @20  go to state 174


state 146

   57 comandos: cmd ";" ok comandos .
